--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.0"
-  }
+  },"scripts": {
+  "start": "node src/index.js" // Adjust the path as needed
+}
 }
